feat: populating it with real data

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="main-second">
             <h1>
               I am John Paul,<br />
-              a digital marketer & software developer<br />
+              a software developer & a project manager<br />
               based in Enugu,
               <span class="nigeria">
                 <span style="color: #008751">Ni</span><span>ger</span
@@ -96,10 +96,35 @@
           </div>
 
           <ul class="main-socials">
-            <li><a href="/twitter">Twitter</a></li>
-            <li><a href="/facebook">Facebook</a></li>
-            <li><a href="/linkedin">LinkedIn</a></li>
-            <li><a href="/Instagram">Instagram</a></li>
+            <li>
+              <a
+                href="https://x.com/JP_Chigozie?t=QAnZhe7LmaqifLrGDQc4Yg&s=09"
+                target="_blank"
+                >Twitter</a
+              >
+            </li>
+            <li>
+              <a href="https://wa.me/2348106907726" target="_blank">Whatsapp</a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/chigozie-johnpaul-7147aa185"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/footballbuzzpodcast?igsh=MmdtMGdoc21udm9v"
+                target="_blank"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/cn-techlite" target="_blank"
+                >GitHub</a
+              >
+            </li>
           </ul>
         </main>
       </section>
@@ -116,17 +141,19 @@
               <p>About</p>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
+              As a seasoned software developer with a passion for innovation, I
+              specialize in designing and developing cutting-edge solutions
+              across various platforms. With expertise in Mobile Application,
+              Desktop Application, Backend Services, Web Development, and
+              Project Management, I deliver high-quality projects that meet
+              clients' needs and exceed expectations.
             </p>
             <div class="about-description-button">
-              <button>
-                <span>Download CV</span>
-              </button>
+              <a href="">
+                <button>
+                  <span>Download CV</span>
+                </button>
+              </a>
             </div>
           </div>
         </section>
@@ -298,10 +325,12 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
-                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
-                  aperiam hic delectus facilis temporibus, deleniti atque.
+                  I place my faith in Jesus Christ, drawing strength, purpose,
+                  and guidance from His teachings. I believe in His
+                  transformative power and strive to live by His principles
+                  daily. Actively serving in my local church, my faith deeply
+                  influences my values, relationships, and overall outlook on
+                  life.
                 </p>
               </div>
             </div>
@@ -312,10 +341,10 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
-                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
-                  aperiam hic delectus facilis temporibus, deleniti atque.
+                  Family is a cornerstone of my life, offering constant love,
+                  support, and a strong sense of belonging. I'm thankful for the
+                  deep bond we share and the guidance, wisdom, and life lessons
+                  that continue to shape who I am.
                 </p>
               </div>
             </div>
@@ -326,10 +355,11 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
-                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
-                  aperiam hic delectus facilis temporibus, deleniti atque.
+                  I aim for a balanced life—getting my greens in (unless jollof
+                  rice is calling), staying active, and keeping my mind steady
+                  with mindfulness and deep breaths. Prioritizing my health
+                  keeps me energized and focused, ideally with a smoothie in one
+                  hand and a to-do list that’s ambitious but negotiable.
                 </p>
               </div>
             </div>
@@ -340,10 +370,12 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
-                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
-                  aperiam hic delectus facilis temporibus, deleniti atque.
+                  As a software developer and project manager, I mix code,
+                  caffeine, and strategy to build solutions that (usually) work and occasionally even beat the deadline. Whether
+                  it’s apps, platforms, or backend puzzles, I love turning chaos
+                  into clean functionality. I write code that behaves (most
+                  days), manage projects without losing my mind,
+                  and tackle problems.
                 </p>
               </div>
             </div>
@@ -354,10 +386,7 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
-                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
-                  aperiam hic delectus facilis temporibus, deleniti atque.
+                  Football isn’t just a game—it’s an emotion; a rhythm I live by. Whether I’m playing, watching, or shouting tactical advice at the TV like I’m on the bench, it fuels my passion. It teaches me teamwork, sharpens my strategy, and reminds me that glory often follows a few dramatic tumbles. For me, football is where joy, discipline, and community collide.
                 </p>
               </div>
             </div>
@@ -380,21 +409,37 @@
           <div class="contact-third-contact">
             <p>reach me at</p>
             <div>
-              <p>sayhello@jonpaul.com</p>
-              <p>+234123456789</p>
+              <a href="mailto:johnpaulchigozie7@yahoo.com">johnpaulchigozie7@yahoo.com</a>
+              <p>+2348106907726</p>
             </div>
           </div>
           <div class="contact-third-socials">
             <p>socials</p>
             <div>
               <p>
-                <a href="">Twitter</a>, <a href="">Instagram</a>,
-                <a href="">Facebook</a>, <a href="">GitHub</a>
+                <a
+                  href="https://x.com/JP_Chigozie?t=QAnZhe7LmaqifLrGDQc4Yg&s=09"
+                  target="_blank"
+                  >Twitter</a
+                >,
+                <a
+                  href="https://www.instagram.com/footballbuzzpodcast?igsh=MmdtMGdoc21udm9v"
+                  target="_blank"
+                  >Instagram</a
+                >,
+                <a
+                  href="https://www.linkedin.com/in/chigozie-johnpaul-7147aa185"
+                  target="_blank"
+                  >LinkedIn</a
+                >,
+                <a href="https://github.com/cn-techlite" target="_blank"
+                  >GitHub</a
+                >
               </p>
             </div>
           </div>
           <div class="contact-third-button">
-            <a href="mailto:jonpaul@gmail.com">
+            <a href="https://wa.me/2348106907726">
               <button>
                 <span>say hello</span>
               </button>
@@ -419,6 +464,7 @@
           <div id="modalType" class="modal-type"></div>
           <h2 id="modalTitle" class="modal-title"></h2>
           <p id="modalDescription" class="modal-description"></p>
+          <p class="modal-link-container"></p>
           <div class="modal-tech">
             <h4>Technologies Used:</h4>
             <div id="modalTech" class="tech-tags"></div>
