--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section id="about" class="about">
         <section class="about-main">
           <div class="about-image">
-            <img src="./assets/about.jpeg" alt="Iamge of John Paul" />
+            <img src="./assets/jp-3.jpeg" alt="Iamge of John Paul" />
           </div>
           <div class="about-description">
             <div class="about-description-heading">
@@ -171,9 +171,9 @@
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
-                  <h3 class="company-name">Dropbox</h3>
-                  <p class="role">Product Designer</p>
-                  <p class="date">August 2019 - Present</p>
+                  <h3 class="company-name">Komedia Expression</h3>
+                  <p class="role">Contract Flutter Developer</p>
+                  <p class="date">June 2023 - March 2025</p>
                   <p class="description">
                     Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
                     magna consectetur nisi cupidatat laboris esse eiusmod
@@ -186,9 +186,9 @@
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
-                  <h3 class="company-name">Microsoft</h3>
-                  <p class="role">Frontend Developer</p>
-                  <p class="date">August 2016 - July 2019</p>
+                  <h3 class="company-name">Televerse Inc</h3>
+                  <p class="role">Contract Flutter Developer</p>
+                  <p class="date">March 2022 - August 2022</p>
                   <p class="description">
                     Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
                     magna consectetur nisi cupidatat laboris esse eiusmod
@@ -299,12 +299,15 @@
           </div>
           <div class="image-container">
             <img
-              src="./assets/about-us-hero-img.webp"
+              src="./assets/jp-1.jpeg"
               alt="Image 1"
               class="slideshow-img active"
             />
-            <img src="./assets/about.jpeg" alt="" class="slideshow-img" />
-            <img src="./assets/ceo_image.jpg" alt="" class="slideshow-img" />
+            <img src="./assets/jp-2.jpeg" alt="Image 2" class="slideshow-img" />
+            <img src="./assets/jp-3.jpeg" alt="Image 3" class="slideshow-img" />
+            <img src="./assets/jp-4.jpeg" alt="Image 4" class="slideshow-img" />
+            <img src="./assets/jp-5.jpeg" alt="Image 5" class="slideshow-img" />
+            <img src="./assets/jp-6.jpeg" alt="Image 6" class="slideshow-img" />
           </div>
         </div>
 
@@ -371,11 +374,11 @@
               <div class="interests-body">
                 <p>
                   As a software developer and project manager, I mix code,
-                  caffeine, and strategy to build solutions that (usually) work and occasionally even beat the deadline. Whether
-                  it’s apps, platforms, or backend puzzles, I love turning chaos
-                  into clean functionality. I write code that behaves (most
-                  days), manage projects without losing my mind,
-                  and tackle problems.
+                  caffeine, and strategy to build solutions that (usually) work
+                  and occasionally even beat the deadline. Whether it’s apps,
+                  platforms, or backend puzzles, I love turning chaos into clean
+                  functionality. I write code that behaves (most days), manage
+                  projects without losing my mind, and tackle problems.
                 </p>
               </div>
             </div>
@@ -386,7 +389,12 @@
               </div>
               <div class="interests-body">
                 <p>
-                  Football isn’t just a game—it’s an emotion; a rhythm I live by. Whether I’m playing, watching, or shouting tactical advice at the TV like I’m on the bench, it fuels my passion. It teaches me teamwork, sharpens my strategy, and reminds me that glory often follows a few dramatic tumbles. For me, football is where joy, discipline, and community collide.
+                  Football isn’t just a game—it’s an emotion; a rhythm I live
+                  by. Whether I’m playing, watching, or shouting tactical advice
+                  at the TV like I’m on the bench, it fuels my passion. It
+                  teaches me teamwork, sharpens my strategy, and reminds me that
+                  glory often follows a few dramatic tumbles. For me, football
+                  is where joy, discipline, and community collide.
                 </p>
               </div>
             </div>
@@ -409,7 +417,9 @@
           <div class="contact-third-contact">
             <p>reach me at</p>
             <div>
-              <a href="mailto:johnpaulchigozie7@yahoo.com">johnpaulchigozie7@yahoo.com</a>
+              <a href="mailto:johnpaulchigozie7@yahoo.com"
+                >johnpaulchigozie7@yahoo.com</a
+              >
               <p>+2348106907726</p>
             </div>
           </div>
