fix: some fixes on this end

--- a/index.html
+++ b/index.html
@@ -171,6 +171,51 @@
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
+                  <h3 class="company-name">ToOctopus Ltd.</h3>
+                  <p class="role">CTO and Software Developer</p>
+                  <p class="date">June 2025 - Present</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">CN Techlite Solutions</h3>
+                  <p class="role">Project Manager</p>
+                  <p class="date">January 2024 - Present</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">Abincii Technology Ltd.</h3>
+                  <p class="role">Senior Mobile App Developer</p>
+                  <p class="date">January 2024 - Present</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
                   <h3 class="company-name">Komedia Expression</h3>
                   <p class="role">Contract Flutter Developer</p>
                   <p class="date">June 2023 - March 2025</p>
