fix: made some more fixes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <div class="main-second">
             <h1>
-              I am John Paul,<br />
+              I am JohnPaul,<br />
               a software developer & a project manager<br />
               based in Enugu,
               <span class="nigeria">
@@ -171,31 +171,55 @@
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
-                  <h3 class="company-name">ToOctopus Ltd.</h3>
-                  <p class="role">CTO and Software Developer</p>
-                  <p class="date">June 2025 - Present</p>
-                  <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
+                  <h3 class="company-name">ToOctopus Holding Ltd.</h3>
+                  <p class="role">
+                    Chief Technology Officer (CTO) and Software Developer
                   </p>
+                  <p class="date">June 2025 - Present</p>
+                  <ul class="description">
+                    <li>
+                      Defined and executed the company's overall tech vision and
+                      roadmap.
+                    </li>
+                    <li>
+                      Designed scalable, maintainable software systems aligned
+                      with business needs.
+                    </li>
+                    <li>
+                      Oversaw end-to-end software development, from ideation to
+                      deployment.
+                    </li>
+                    <li>
+                      Built and deployed robust applications across frontend and
+                      backend.
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
                   <h3 class="company-name">CN Techlite Solutions</h3>
-                  <p class="role">Project Manager</p>
+                  <p class="role">Project Manager & Instructor</p>
                   <p class="date">January 2024 - Present</p>
-                  <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
-                  </p>
+                  <ul class="description">
+                    <li>
+                      Worked closely with design, engineering, and marketing
+                      teams.
+                    </li>
+                    <li>
+                      Led multiple successful launches that met user needs and
+                      drove adoption
+                    </li>
+                    <li>
+                      Taught programming concepts and industry practice to
+                      aspiring developers
+                    </li>
+                    <li>
+                      Applied lean and agile methodologies for efficient
+                      iteration and delivery.
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="job">
@@ -204,13 +228,24 @@
                   <h3 class="company-name">Abincii Technology Ltd.</h3>
                   <p class="role">Senior Mobile App Developer</p>
                   <p class="date">January 2024 - Present</p>
-                  <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
-                  </p>
+                  <ul class="description">
+                    <li>
+                      Built cross-platform apps for Android and iOS using
+                      Flutter.
+                    </li>
+                    <li>
+                      Designed responsive, user-friendly interfaces with Flutter
+                      widgets.
+                    </li>
+                    <li>
+                      Improved app performance and responsiveness through code
+                      refinement.
+                    </li>
+                    <li>
+                      Contributed to multiple successful app deployments that
+                      met client and user needs
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="job">
@@ -219,13 +254,24 @@
                   <h3 class="company-name">Komedia Expression</h3>
                   <p class="role">Contract Flutter Developer</p>
                   <p class="date">June 2023 - March 2025</p>
-                  <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
-                  </p>
+                  <ul class="description">
+                    <li>
+                      Built cross-platform apps for Android and iOS using
+                      Flutter.
+                    </li>
+                    <li>
+                      Designed responsive, user-friendly interfaces with Flutter
+                      widgets.
+                    </li>
+                    <li>
+                      Worked with designers, product managers and BE developers
+                      to deliver features
+                    </li>
+                    <li>
+                      Improved app performance and responsiveness through code
+                      refinement.
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="job">
@@ -234,13 +280,24 @@
                   <h3 class="company-name">Televerse Inc</h3>
                   <p class="role">Contract Flutter Developer</p>
                   <p class="date">March 2022 - August 2022</p>
-                  <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
-                  </p>
+                  <ul class="description">
+                    <li>
+                      Built cross-platform apps for Android and iOS using
+                      Flutter.
+                    </li>
+                    <li>
+                      Worked with designers, product managers and BE developers
+                      to deliver features
+                    </li>
+                    <li>
+                      Designed responsive, user-friendly interfaces with Flutter
+                      widgets.
+                    </li>
+                    <li>
+                      Improved app performance and responsiveness through code
+                      refinement.
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -249,30 +306,26 @@
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
-                  <h3 class="company-name">University of Life</h3>
-                  <p class="role">Master in Software Development</p>
-                  <p class="date">August 2019 - Present</p>
+                  <h3 class="company-name">University of Nigeria, Nsukka</h3>
+                  <p class="role">B.Sc. Electronic Engineering</p>
+                  <p class="date">August 2015 - August 2020</p>
                   <p class="description">
                     Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
+                    magna consectetur nisi cupidatat laboris esse eiusmod.
                   </p>
                 </div>
               </div>
               <div class="job">
                 <div class="bullet"></div>
                 <div class="job-details">
-                  <h3 class="company-name">School of Cool Designers</h3>
-                  <p class="role">B.A. Degree in Graphic Design</p>
-                  <p class="date">August 2016 - July 2019</p>
+                  <h3 class="company-name">
+                    Saint Michael Model Comprehensive Secondary School, Nimo
+                  </h3>
+                  <p class="role">First School Leaving Certificate</p>
+                  <p class="date">2008 - 2011</p>
                   <p class="description">
                     Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod
-                    deserunt aute do quis velit esse sed Ut proident cupidatat
-                    nulla esse cillum laborum occaecat nostrud sit dolor
-                    incidunt amet est occaecat nisi.
+                    magna consectetur nisi cupidatat laboris esse eiusmod.
                   </p>
                 </div>
               </div>
@@ -325,7 +378,7 @@
         <div class="other-text">
           <div class="text-container">
             <p>
-              Hi, I’m John Paul — a proud Nigerian based in Enugu, where I
+              Hi, I’m JohnPaul — a proud Nigerian based in Enugu, where I
               balance life between lines of code and creative campaigns. But
               there’s more to me than just pixels and performance metrics.
             </p>
