--- a/index.html
+++ b/index.html
@@ -310,8 +310,11 @@
                   <p class="role">B.Sc. Electronic Engineering</p>
                   <p class="date">August 2015 - August 2020</p>
                   <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod.
+                    Developed strong analytical and problem-solving skills
+                    through coursework in circuit design, control systems, and
+                    signal processing. Completed a final-year project focused on
+                    automation systems, laying a strong foundation for
+                    transitioning into software development.
                   </p>
                 </div>
               </div>
@@ -324,8 +327,9 @@
                   <p class="role">First School Leaving Certificate</p>
                   <p class="date">2008 - 2011</p>
                   <p class="description">
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
-                    magna consectetur nisi cupidatat laboris esse eiusmod.
+                    Built foundational knowledge in mathematics and sciences.
+                    Participated in STEM clubs and competitions, which sparked
+                    early interest in technology and innovation.
                   </p>
                 </div>
               </div>
