fix: update index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <div class="main-second">
             <h1>
-              I am JohnPaul,<br />
+              I am Johnpaul,<br />
               a software developer & a project manager<br />
               based in Enugu,
               <span class="nigeria">
@@ -133,7 +133,7 @@
       <section id="about" class="about">
         <section class="about-main">
           <div class="about-image">
-            <img src="./assets/jp-3.jpeg" alt="Iamge of John Paul" />
+            <img src="./assets/jp-3.jpeg" alt="Iamge of Johnpaul" />
           </div>
           <div class="about-description">
             <div class="about-description-heading">
@@ -161,8 +161,7 @@
           <div class="about-expertise-heading">Expertise</div>
           <div class="about-expertise-description">
             <p>
-              Software Development, Mobile App Development, Digital Marketing,
-              Branding
+              Software Development, Mobile App Development, Product Management
             </p>
           </div>
           <div class="about-expertise-list">
@@ -322,9 +321,24 @@
                 <div class="bullet"></div>
                 <div class="job-details">
                   <h3 class="company-name">
+                    Nnamdi Azikiwe Secondary School, Abagana
+                  </h3>
+                  <p class="role">WASSCE Certificate</p>
+                  <p class="date">2011 - 2014</p>
+                  <p class="description">
+                    Built foundational knowledge in mathematics and sciences.
+                    Participated in STEM clubs and competitions, which sparked
+                    early interest in technology and innovation.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">
                     Saint Michael Model Comprehensive Secondary School, Nimo
                   </h3>
-                  <p class="role">First School Leaving Certificate</p>
+                  <p class="role">Junior WASSCE Certificate</p>
                   <p class="date">2008 - 2011</p>
                   <p class="description">
                     Built foundational knowledge in mathematics and sciences.
@@ -382,7 +396,7 @@
         <div class="other-text">
           <div class="text-container">
             <p>
-              Hi, I’m JohnPaul — a proud Nigerian based in Enugu, where I
+              Hi, I’m Johnpaul — a proud Nigerian based in Enugu, where I
               balance life between lines of code and creative campaigns. But
               there’s more to me than just pixels and performance metrics.
             </p>
