fix: added calling from the website

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
               <a href="mailto:johnpaulchigozie7@yahoo.com"
                 >johnpaulchigozie7@yahoo.com</a
               >
-              <p>+2348106907726</p>
+              <a href="tel:+2348106907726">+2348106907726</a>
             </div>
           </div>
           <div class="contact-third-socials">
